# tubeAmp-Designer

./: .gitignore  README.md  meson.build  tAD.desktop  tAD.pro
.kdev4/: tubeAmp-Designer.kdev4
Appimage/: build-appimage.sh
FAUST/: kpp_tubeamp.dsp  meson.build
export/: LICENSE.txt  installer.nsi  installer_modern.nsi  tAD_ru.qm
src/: amp_nonlinear_edit_widget.cpp  amp_nonlinear_edit_widget.h  block_edit_widget.cpp  block_edit_widget.h  cabinet_edit_widget.cpp  cabinet_edit_widget.h  centralwidget.cpp  centralwidget.h  convolver_dialog.cpp  convolver_dialog.h  deconvolver_dialog.cpp  deconvolver_dialog.h  equalizer_widget.cpp  equalizer_widget.h  faust-support.h  file_resampling_thread.cpp  file_resampling_thread.h  freq_response_widget.cpp  freq_response_widget.h  load_dialog.cpp  load_dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  math_functions.cpp  math_functions.h  meson.build  message_widget.cpp  message_widget.h  nonlinear_widget.cpp  nonlinear_widget.h  player.cpp  player.h  player_panel.cpp  player_panel.h  preamp_filter_edit_widget.cpp  preamp_filter_edit_widget.h  preamp_nonlinear_edit_widget.cpp  preamp_nonlinear_edit_widget.h  processor.cpp  (+18 more)
