moc_files = qt5.preprocess(moc_headers : ['mainwindow.h',
                                          'centralwidget.h',
                                          'block_edit_widget.h',
                                          'preamp_filter_edit_widget.h',
                                          'freq_response_widget.h',
                                          'equalizer_widget.h',
                                          'nonlinear_widget.h',
                                          'preamp_nonlinear_edit_widget.h',
                                          'slide_box_widget.h',
                                          'tonestack_edit_widget.h',
                                          'amp_nonlinear_edit_widget.h',
                                          'cabinet_edit_widget.h',
                                          'player_panel.h',
                                          'tubeamp_panel.h',
                                          'tadial.h',
                                          'processor.h',
                                          'player.h',
                                          'load_dialog.h',
                                          'file_resampling_thread.h',
                                          'profiler_dialog.h',
                                          'profiler.h',
                                          'message_widget.h',
                                          'convolver_dialog.h',
                                          'deconvolver_dialog.h',
                                          'tameter.h'],
                           qresources: 'resources.qrc',
                           include_directories: inc,
                           dependencies: qt5_dep)

translations = qt5.compile_translations(ts_files : 'tAD_ru_RU.ts', build_by_default : true,
install: true, install_dir : get_option('datadir') / 'tubeAmp Designer/translations')

executable('tAD', 'main.cpp',
                     'mainwindow.cpp',
                     'centralwidget.cpp',
                     'block_edit_widget.cpp',
                     'preamp_filter_edit_widget.cpp',
                     'freq_response_widget.cpp',
                     'equalizer_widget.cpp',
                     'nonlinear_widget.cpp',
                     'preamp_nonlinear_edit_widget.cpp',
                     'slide_box_widget.cpp',
                     'tonestack_edit_widget.cpp',
                     'amp_nonlinear_edit_widget.cpp',
                     'cabinet_edit_widget.cpp',
                     'player_panel.cpp',
                     'tubeamp_panel.cpp',
                     'tadial.cpp',
                     'processor.cpp',
                     'math_functions.cpp',
                     'player.cpp',
                     'load_dialog.cpp',
                     'file_resampling_thread.cpp',
                     'profiler_dialog.cpp',
                     'profiler.cpp',
                     'message_widget.cpp',
                     'convolver_dialog.cpp',
                     'deconvolver_dialog.cpp',
                     'tameter.cpp',
        moc_files,
        kpp_tubeamp_dsp,
        install: true,
           include_directories: inc,
           dependencies : [qt5_dep, gsl_dep, thread_dep, zita_convolver_dep,
                           fftw3_dep, fftw3f_dep, jack_dep, sndfile_dep, zita_resampler_dep])
